--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template",
+  "name": "nuxt-capacitor-ok",
   "version": "1.0.0",
-  "description": "My cool Nuxt.js project",
+  "description": "",
   "author": "",
   "private": true,
   "scripts": {
@@ -24,5 +24,6 @@
     "deepmerge": "^4.2.2",
     "fibers": "^4.0.2",
     "replace": "1.1.0"
-  }
+  },
+  "keywords": []
 }
